--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@sveltejs/adapter-auto": "3.2.0",
     "@sveltejs/kit": "2.5.7",
     "@sveltejs/vite-plugin-svelte": "3.1.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
     "svelte": "5.0.0-next.120",
     "svelte-check": "3.7.1",
+    "tailwindcss": "^3.3.6",
     "tslib": "2.6.2",
     "typescript": "5.4.5",
     "vite": "5.2.11"
