--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "typescript": "5.4.5",
     "vite": "5.2.11"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1"
+  }
 }
