--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@sveltejs/adapter-auto": "3.2.0",
     "@sveltejs/kit": "2.5.7",
     "@sveltejs/vite-plugin-svelte": "3.1.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.38",
+    "postcss-load-config": "5.1.0",
     "svelte": "5.0.0-next.120",
     "svelte-check": "3.7.1",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "3.4.3",
     "tslib": "2.6.2",
     "typescript": "5.4.5",
     "vite": "5.2.11"
   },
   "type": "module",
   "dependencies": {
-    "bits-ui": "^0.21.7",
-    "clsx": "^2.1.1",
-    "lucide-svelte": "^0.378.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "bits-ui": "0.21.7",
+    "clsx": "2.1.1",
+    "lucide-svelte": "0.378.0",
+    "tailwind-merge": "2.3.0",
+    "tailwind-variants": "0.2.1"
   }
 }
